--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,16 +98,8 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           pip install mod_wsgi
 
-      - name: Test mod_wsgi import
-        shell: pwsh
-        run: |
-          python - <<EOF
-          try:
-              import mod_wsgi
-              print("mod_wsgi imported successfully from:", mod_wsgi.__file__)
-          except Exception as e:
-              raise SystemExit(f"ERROR: Failed to import mod_wsgi: {e}")
-          EOF
+      - name: Test python import
+        run: python -c "import mod_wsgi; print(mod_wsgi.__file__)"
         
       - name: Collect mod_wsgi wheel
         shell: pwsh
