--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build mod_wsgi Win64 Python 3.13
+name: Build mod_wsgi Win64
 
 on:
   workflow_dispatch:
@@ -6,7 +6,9 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
+    strategy:
+      matrix:
+        python-version: [3.13.0, 3.14.0]  # Build for both versions
     env:
       APACHE_DIR: ${{ github.workspace }}\Apache24
 
@@ -14,10 +16,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Python 3.13 (64-bit)
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.13.0"
+          python-version: ${{ matrix.python-version }}
           architecture: "x64"
 
       - name: Verify Python (64-bit)
@@ -27,7 +29,6 @@ jobs:
         shell: pwsh
         run: |
           $html = curl.exe -L https://www.apachelounge.com/download/
-
           $pattern = 'href="([^"]*httpd-[^"]*Win64-VS\d+\.zip)"'
           $matches = [regex]::Matches($html, $pattern)
 
@@ -36,45 +37,24 @@ jobs:
               exit 1
           }
 
-          # Force array even if single match
           $links = @($matches | ForEach-Object { $_.Groups[1].Value })
-
-          # Sort by Apache version number
           $links = @($links | Sort-Object {
-              if ($_ -match 'httpd-(\d+\.\d+\.\d+)') {
-                  [version]$matches[1]
-              } else {
-                  [version]"0.0.0"
-              }
+              if ($_ -match 'httpd-(\d+\.\d+\.\d+)') { [version]$matches[1] } else { [version]"0.0.0" }
           })
-
-          # Pick the latest
           $latest = $links[-1]
 
-          if ($latest -notmatch "^http") {
-              $latest = "https://www.apachelounge.com$latest"
-          }
-
+          if ($latest -notmatch "^http") { $latest = "https://www.apachelounge.com$latest" }
           Write-Host "Latest Apache URL: $latest"
 
-          # Extract version info for naming
           if ($latest -match 'httpd-(\d+\.\d+\.\d+)-(\d+)-Win64-(VS\d+)') {
               $apacheVersion = $Matches[1]
               $buildTag      = $Matches[2]
               $vsVersion     = $Matches[3]
-
-              Write-Host "Apache Version: $apacheVersion"
-              Write-Host "Build Tag: $buildTag"
-              Write-Host "Compiler: $vsVersion"
-
               echo "APACHE_VERSION=$apacheVersion" >> $env:GITHUB_ENV
               echo "APACHE_BUILD=$buildTag" >> $env:GITHUB_ENV
               echo "APACHE_VS=$vsVersion" >> $env:GITHUB_ENV
           }
-
           echo "LATEST_APACHE=$latest" >> $env:GITHUB_ENV
-
-
 
       - name: Download Apache
         shell: pwsh
@@ -83,14 +63,12 @@ jobs:
           curl.exe -L $env:LATEST_APACHE -o apache.zip
           Expand-Archive apache.zip .
           $apachePath = Join-Path $env:GITHUB_WORKSPACE "Apache24"
-          dir $apachePath
           Write-Host "Apache extracted to $apachePath"
 
       - name: Set Apache root for mod_wsgi build
         shell: pwsh
         run: |
           $apachePath = Join-Path $env:GITHUB_WORKSPACE "Apache24"
-          Write-Host "Setting MOD_WSGI_APACHE_ROOTDIR = $apachePath"
           echo "MOD_WSGI_APACHE_ROOTDIR=$apachePath" >> $env:GITHUB_ENV
 
       - name: Install build dependencies & build mod_wsgi
@@ -99,8 +77,15 @@ jobs:
           pip install mod_wsgi
 
       - name: Test python import
-        run: python -c "import mod_wsgi; print(mod_wsgi.__file__)"
-        
+        run: |
+          python - <<EOF
+          try:
+              import mod_wsgi
+              print("mod_wsgi imported successfully from:", mod_wsgi.__file__)
+          except Exception as e:
+              raise SystemExit(f"ERROR: Failed to import mod_wsgi: {e}")
+          EOF
+
       - name: Collect mod_wsgi wheel
         shell: pwsh
         run: |
@@ -114,5 +99,5 @@ jobs:
       - name: Upload mod_wsgi wheel
         uses: actions/upload-artifact@v4
         with:
-            name: mod_wsgi-win64-py313
+            name: mod_wsgi-win64-${{ matrix.python-version }}
             path: output/*.whl
